streaming/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shaka-packager
  namespace: streaming
spec:
  selector:
    matchLabels:
      app: shaka-packager
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: shaka-packager
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: transcoder
        image: jrottenberg/ffmpeg:4.1-alpine
        command: [ "/bin/sh", "-c", "ffmpeg $FFMPEG_OPTIONS -i $SOURCE_URL $ENCODING_OPTIONS"]
      - name: shaka-packager
        image: google/shaka-packager:release-v2.4.2
        command: ["/bin/sh", "-c", "packager $ARGUMENTS"]
        workingDir: /stream
        volumeMounts:
        - name: shared-data
          mountPath: /stream
      - name: nginx
        image: nginx
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
